# kotlin-proto-native-example

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
bindings/c/: CMakeLists.txt  cookie_store.pb-c.c  cookie_store.pb-c.h  main.c
bindings/python/: cookie_store_bridge.py  cookie_store_demo.py  cookie_store_pb2.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/: cookie_store.h
proto/: cookie_store.proto
src/commonMain/kotlin/com/getiox/cookie/: CookieStore.kt  models.kt
src/nativeMain/kotlin/: cookie_error_codes.kt  cookie_store_native.kt  pointer_ext.kt
